--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,16 @@ language: ruby
 rvm:
   - 1.8.7
   - 1.9.3
+  - jruby-18mode # JRuby in 1.8 mode
+  - jruby-19mode # JRuby in 1.9 mode
+  - rbx-18mode
+  - rbx-19mode
 script: "rake"
 gemfile:
   - Gemfile
 before_install:
   - uname -a
-  - ./python26_hook
+  - ci/python26_hook
   - sudo apt-get install libvips-dev
 before_script:
   - ./compile
