--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,13 @@ language: ruby
 rvm:
   - 1.9.3
   - 2.0
+  - 2.1
 script: "rake"
 gemfile:
   - Gemfile
 before_install:
   - uname -a
+  - sudo apt-get update
   - sudo apt-get install libvips-dev
 before_script:
   - ./compile
