--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,22 @@
+env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+
+sudo: false
+cache: bundler
+
 language: ruby
 rvm:
   - 1.9.3
   - 2.0
   - 2.1
+
 script: "rake"
+
 gemfile:
   - Gemfile
+
 before_install:
   - uname -a
-  - sudo apt-get update
-  - sudo apt-get install libvips-dev
-before_script:
-  - ./compile
+  - apt-get update
+  - apt-get install libvips-dev
