--- a/.travis.yml
+++ b/.travis.yml
@@ -53,8 +53,7 @@ before_install:
   - cd vips-$LIBVIPS
   - >
     CXXFLAGS=-D_GLIBCXX_USE_CXX11_ABI=0
-    ./configure
+    ./configure --prefix=/usr
   - make
   - sudo make install
   - sudo ldconfig
-  - cd ..
