--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ env:
     - VIPS_VERSION_MAJOR=8
     - VIPS_VERSION_MINOR=4
     - VIPS_VERSION_MICRO=4
-    - VIPS_VERSION=$VIPS_VERSION_MAJOR.$VIPS_VERSION_MINOR.$VIPS_VERSION_MICRO
+    - VIPS_VERSION=$VIPS_VERSION_MAJOR.$VIPS_VERSION_MINOR
+    - VIPS_VERSION_FULL=$VIPS_VERSION.$VIPS_VERSION_MICRO
     - PATH=$HOME/vips/bin:$PATH
     - LD_LIBRARY_PATH=$HOME/vips/lib:$LD_LIBRARY_PATH
     - PKG_CONFIG_PATH=$HOME/vips/lib/pkgconfig:$PKG_CONFIG_PATH
