--- a/.travis.yml
+++ b/.travis.yml
@@ -44,9 +44,11 @@ cache:
   directories:
     - $HOME/vips
 
+# gobject-introspection 3.1 declares itself as 2.1 minimum, so we can't test
+# 2.0 ... in fact it seems to work if you force it, but I don't think we can do
+# that on travis
 language: ruby
 rvm:
-  - 2.0
   - 2.1
   - 2.2
   - 2.3
