--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
     - VIPS_VERSION_MAJOR=8
     - VIPS_VERSION_MINOR=5
-    - VIPS_VERSION_MICRO=3
+    - VIPS_VERSION_MICRO=7
     - PATH=$HOME/vips/bin:$PATH
     - LD_LIBRARY_PATH=$HOME/vips/lib:$LD_LIBRARY_PATH
     - PKG_CONFIG_PATH=$HOME/vips/lib/pkgconfig:$PKG_CONFIG_PATH
@@ -17,7 +17,7 @@ addons:
     packages:
       - libexpat1-dev
       - gettext
-      - liblcms1-dev
+      - liblcms2-dev
       - libmagickwand-dev
       - libopenexr-dev
       - libcfitsio3-dev
@@ -29,7 +29,11 @@ addons:
       - liborc-0.4-dev
       - libpango1.0-dev
       - libpoppler-glib-dev
+      - librsvg2-dev
       - libwebp-dev
+        # missing on trusty, unfortunately
+        # - libwebpmux2
+      - libfftw3-dev
       - libglib2.0-dev
 
 cache:
@@ -51,4 +55,4 @@ gemfile:
 
 before_install:
   - uname -a
-  - bash install-vips.sh
+  - bash install-vips.sh --without-python
