update libvips version to 8.6.4
and reorder packages by priority

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,36 @@
+dist: trusty
 sudo: false
 
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
     - VIPS_VERSION_MAJOR=8
-    - VIPS_VERSION_MINOR=5
-    - VIPS_VERSION_MICRO=7
+    - VIPS_VERSION_MINOR=6
+    - VIPS_VERSION_MICRO=4
     - PATH=$HOME/vips/bin:$PATH
     - LD_LIBRARY_PATH=$HOME/vips/lib:$LD_LIBRARY_PATH
     - PKG_CONFIG_PATH=$HOME/vips/lib/pkgconfig:$PKG_CONFIG_PATH
-
-dist: trusty
 
 addons:
   apt:
     packages:
       - libexpat1-dev
       - gettext
+      - libglib2.0-dev
+      - liborc-0.4-dev
+      - libfftw3-dev
       - liblcms2-dev
       - libmagickwand-dev
       - libopenexr-dev
       - libcfitsio3-dev
       - libgif-dev
-      - libgs-dev
       - libgsf-1-dev
       - libmatio-dev
       - libopenslide-dev
-      - liborc-0.4-dev
       - libpango1.0-dev
       - libpoppler-glib-dev
       - librsvg2-dev
       - libwebp-dev
-        # missing on trusty, unfortunately
-        # - libwebpmux2
-      - libfftw3-dev
-      - libglib2.0-dev
 
 cache:
   directories:
@@ -56,4 +52,4 @@ gemfile:
 
 before_install:
   - uname -a
-  - bash install-vips.sh --without-python
+  - bash install-vips.sh 
